# fastollama

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  models.py  repository.py  routers.py  schemas.py
app/auth/: __init__.py  auth.py  dependencies.py  models.py  schemas.py  utils.py
app/core/: __init__.py  config.py  db.py  errors.py  logger.py  middleware.py
