[project]
name = "fastollama"
version = "0.1.0"
description = ""
authors = [
    {name = "Your New Username",email = "yournewemail@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pymongo (>=4.11.1,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=5.2.1,<6.0.0)",
    "ollama (>=0.4.7,<0.5.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.8"
uvicorn = "^0.29.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
